# linac_varian

./: .gitignore  .main.cc.swo  .main.cc.swp  .vimrc  CMakeLists.txt  README.md  main  main.cc  vis.mac
include/: linacG4DetectorConstruction.hh
src/: linacG4DetectorConstruction.cc
